Updated script to run the master on ebi-002.
git-svn-id: https://interproscan.googlecode.com/svn/trunk@523 ea5da8b0-6d6b-11de-9de6-4d42d2ab87c0